# tensorgraph

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: array.rs  blas.rs  device.rs  lib.rs  matrix.rs  ptr.rs  tensor.rs  vec.rs
src/blas/: cpu.rs
src/device/: cpu.rs  cuda.rs
src/ptr/: slice.rs
tensorgraph/: Cargo.toml
tensorgraph-math/: Cargo.toml
tensorgraph-math/benches/: benches.rs
tensorgraph-math/examples/: blas.rs  cublas.rs  cublas_advanced.rs
tensorgraph-math/src/: blas.rs  dims.rs  lib.rs  storage.rs  tensor.rs
tensorgraph-math/src/blas/: cpu.rs  cublas.rs
tensorgraph-math/src/blas/cpu/: blas_sys.rs  matmul.rs
tensorgraph-math/src/blas/cublas/: gemm.rs  global.rs
tensorgraph-math/src/tensor/: dot.rs  matrix.rs  ndarray.rs  ops.rs  vector.rs
tensorgraph-sys/: Cargo.toml
tensorgraph-sys/benches/: benches.rs
tensorgraph-sys/src/: blas.rs  boxed.rs  device.rs  dims.rs  lib.rs  storage.rs  tensor.rs  vec.rs  zero.rs
tensorgraph-sys/src/blas/: blas_sys.rs  cpu.rs  cublas.rs  matmul.rs
tensorgraph-sys/src/blas/cpu/: blas_sys.rs  matmul.rs
tensorgraph-sys/src/device/: cpu.rs  cuda.rs
tensorgraph-sys/src/device/cuda/: context.rs  global.rs  stream.rs  unified.rs
tensorgraph-sys/src/ptr/: mod.rs  non_null.rs  reef.rs  slice.rs
tensorgraph/examples/: mnist.rs
tensorgraph/src/: graph.rs  lib.rs  ops.rs
