[package]
name = "tensorgraph-math"
version = "0.1.11"
edition = "2021"
description = "backbone for tensorgraph, providing math primitives"
repository = "https://github.com/conradludgate/tensorgraph"
keywords = ["numerics", "machine-learning", "neural-network", "cuda", "blas"]
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
tensorgraph-sys = { version = "=0.1.11", path = "../tensorgraph-sys" }

# cublas
rcublas-sys = { version = "0.5.0", optional = true }

# blas
blas-src = { version = "0.8" }
blas-sys = { version = "0.7", optional = true }

# smallvec dimension
smallvec = { version = "1.7", optional = true, features = ["const_generics"] }

# ndarray conversions
ndarray = { version = "0.15", optional = true }

[dev-dependencies]
approx = "0.5.0"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false

[features]
default = ["openblas", "cublas", "ndarray"]

cublas = ["tensorgraph-sys/cuda", "rcublas-sys"]

accelerate = ["blas-sys", "blas-src/accelerate"]
blis = ["blas-sys", "blas-src/blis"]
intel-mkl = ["blas-sys", "blas-src/intel-mkl"]
netlib = ["blas-sys", "blas-src/netlib"]
openblas = ["blas-sys", "blas-src/openblas"]
