[package]
name = "tensorgraph-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2"

# cuda
cust = { version = "0.2", optional = true }
cust_raw = { version = "0.11", optional = true }

# cublas
rcublas-sys = { version = "0.5.0", optional = true }

# blas
blas-src = { version = "0.8" }
blas-sys = { version = "0.7", optional = true }

matrixmultiply = { version = "0.3", optional = true }

[features]
default = ["accelerate"]

cuda = ["cust", "cust_raw"]

cublas = ["cuda", "rcublas-sys"]

accelerate = ["blas-sys", "blas-src/accelerate"]
blis = ["blas-sys", "blas-src/blis"]
intel-mkl = ["blas-sys", "blas-src/intel-mkl"]
netlib = ["blas-sys", "blas-src/netlib"]
openblas = ["blas-sys", "blas-src/openblas"]

matrixmultiply_threading = ["matrixmultiply/threading"]

[dev-dependencies]
approx = "0.5.0"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
