[package]
name = "tensorgraph-sys"
version = "0.1.10"
edition = "2021"
description = "backbone for tensorgraph, providing memory manamagement across devices"
repository = "https://github.com/conradludgate/tensorgraph"
keywords = ["numerics", "machine-learning", "neural-network", "cuda", "blas"]
license-file = "../LICENSE"

[dependencies]

# cuda
cust = { version = "0.2", optional = true }
cust_raw = { version = "0.11", optional = true }

[features]
default = []

cuda = ["cust", "cust_raw"]
